# w-social-atproto

./: .gitignore  123.txt  README.md  bash-wadmin  pds-wadmin  pnpm-lock.yaml
.github/workflows/: build-and-deploy-appview.yaml  build-and-deploy-ozone.yaml  build-and-deploy.yaml  build-and-push-wsocial-ghcr.yaml  build-pds-tarball.yaml
lexicons/com/atproto/admin/: addNeuroLink.json  getNeuroLink.json  importAccount.json  listNeuroAccounts.json  removeNeuroLink.json  updateNeuroLink.json  validateMigrationTarget.json
lexicons/io/trustanchor/admin/: clearInventory.json  createAccountSession.json  createBotAccount.json  createInvitation.json  createIosTestUser.json  getBuildInfo.json  getInventoryStatus.json  listInvitations.json  loadInventory.json  setAccountPassword.json  setThreadViewPreferences.json  subscribeToLists.json  updateInvitationEmailStatus.json
lexicons/io/trustanchor/quicklogin/: callback.json  getLinkedAccounts.json
pds-wadmin-modules/: README.md  brevo_integration.py  pyproject.toml  requirements.txt
pds-wadmin-modules/wadmin/: __init__.py  __main__.py  api.py  brevo.py  cli.py  config.py  migration.py  utils.py
pds-wadmin-modules/wadmin.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
pds-wadmin-modules/wadmin/commands/: __init__.py  account.py  admin.py  invitation.py  nomad.py  wid.py
services/dataplane/: Dockerfile  index.js
services/ozone/: Dockerfile
services/pds/: Dockerfile  index.js
